# gx-app

./: Dockerfile  README.md  docker-compose.yml  improvements.txt  pyproject.toml  requirements.txt
src/gx/: app.py  common.py
